--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="mt-auto py-4 bg-white dark:bg-bodybg text-center border-t border-defaultborder dark:border-defaultborder/10">
     <div class="container">
-        <span class="text-textmuted dark:text-textmuted/50">
+        <!-- <span class="text-textmuted dark:text-textmuted/50">
             Copyright © <span id="year"> 2025 </span>
             <a href="javascript:void(0);" class="text-dark font-medium">Xintra</a>.
             Designed with <span class="text-danger">&#10084;</span> by
@@ -8,6 +8,6 @@
                 <span class="font-medium text-primary">Spruko</span>
             </a>
             All rights reserved
-        </span>
+        </span> -->
     </div>
 </footer>
