--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -249,7 +249,7 @@
             <!-- Start::header-element -->
             <li class="header-element cart-dropdown hs-dropdown ti-dropdown [--auto-close:inside]">
                 <!-- Start::header-link|dropdown-toggle -->
-                <a aria-label="anchor"  href="javascript:void(0);" class="header-link hs-dropdown-toggle ti-dropdown-toggle"
+                <!-- <a aria-label="anchor"  href="javascript:void(0);" class="header-link hs-dropdown-toggle ti-dropdown-toggle"
                     data-bs-auto-close="outside" data-bs-toggle="dropdown">
                     <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 header-link-icon" fill="none"
                         viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
@@ -258,10 +258,10 @@
                     </svg>
                     <span class="badge bg-secondary rounded-full header-icon-badge text-white"
                         id="cart-icon-badge">{{ cartItemCount }}</span>
-                </a>
+                </a> -->
                 <!-- End::header-link|dropdown-toggle -->
                 <!-- Start::main-header-dropdown -->
-                <div class="main-header-dropdown hs-dropdown-menu ti-dropdown-menu hidden" data-popper-placement="none">
+                <!-- <div class="main-header-dropdown hs-dropdown-menu ti-dropdown-menu hidden" data-popper-placement="none">
                     <div class="p-4">
                         <div class="flex items-center justify-between">
                             <p class="mb-0 text-[15px] font-medium">Cart Items<span
@@ -458,7 +458,7 @@
                                 data-abc="true">continue shopping <i class="bi bi-arrow-right ms-1"></i></a>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <!-- End::main-header-dropdown -->
             </li>
             <!-- End::header-element -->
@@ -674,7 +674,7 @@
                             <span class="block text-xs text-textmuted dark:text-textmuted/50">UI/UX Designer</span>
                         </div>
                     </li>
-                    <li><a class="ti-dropdown-item flex items-center" routerLink="/pages/profile"><i
+                    <!-- <li><a class="ti-dropdown-item flex items-center" routerLink="/pages/profile"><i
                                 class="fe fe-user p-1 rounded-full bg-primary/10 text-primary me-2 text-[1rem]"></i>Profile</a>
                     </li>
                     <li><a class="ti-dropdown-item flex items-center" routerLink="/pages/email/mailapp"><i
@@ -690,10 +690,18 @@
                     <li class="border-t border-defaultborder dark:border-defaultborder/10 bg-light"><a
                             class="ti-dropdown-item flex items-center" routerLink="/pages/chat"><i
                                 class="fe fe-help-circle p-1 rounded-full bg-primary/10 text-primary set me-2 text-[1rem]"></i>Help</a>
-                    </li>
-                    <li><a class="ti-dropdown-item flex items-center" routerLink="/authentication/sign-in/cover"><i
-                                class="fe fe-lock p-1 rounded-full bg-primary/10 text-primary ut me-2 text-[1rem]"></i>Log
-                            Out</a></li>
+                    </li> -->
+                    <li>
+  <a class="ti-dropdown-item flex items-center"
+     href="javascript:void(0);"
+     (click)="onLogoutClick($event)"
+     [class.opacity-50]="loggingOut"
+     [class.pointer-events-none]="loggingOut">
+    <i class="fe fe-lock p-1 rounded-full bg-primary/10 text-primary ut me-2 text-[1rem]"></i>
+    {{ loggingOut ? 'Logging out...' : 'Log Out' }}
+  </a>
+</li>
+
                 </ul>
             </li>
             <!-- End::header-element -->
