--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -43,12 +43,11 @@
   
             <span class="category-name">{{ menuItem.headTitle }}</span>
             } @if (menuItem.type === 'link') {
-            <a
-              class="side-menu__item"
-              [routerLink]="!menuItem.type ? null : [menuItem.path]"
-              routerLinkActive="active"
-              (click)="setNavActive($event, menuItem.path ?? '')"
-            >
+           <a
+    class="side-menu__item"
+    [routerLink]="resolve(menuItem) || null"
+    routerLinkActive="active"
+    (click)="setNavActive($event, resolve(menuItem) || '')">
         
                 @if (menuItem.icon) {
                     <span class="iconclick" [appSvgReplace]="menuItem.icon"></span>
@@ -67,7 +66,7 @@
             <a
               class="side-menu__item"
               href="javascript:;"
-              (click)="setNavActive($event, menuItem.path ?? '')"
+(click)="setNavActive($event, resolve(menuItem) || '')"
             >
             @if (menuItem.icon) {
                 <span class="iconclick" [appSvgReplace]="menuItem.icon"></span>
@@ -123,14 +122,13 @@
                 <!-- link -->
                 @if (childrenItem.type === 'link') {
                 <a
-                  class="side-menu__item"
-                  [routerLink]="!childrenItem.type ? null : [childrenItem.path]"
-                  routerLinkActive="active"
-                  [routerLinkActiveOptions]="{ exact: true }"
-                  (click)="setNavActive($event, childrenItem.path ?? '')"
-                >
-                  {{ childrenItem.title }}
-                </a>
+    class="side-menu__item"
+    [routerLink]="resolve(childrenItem) || null"
+    routerLinkActive="active"
+    [routerLinkActiveOptions]="{ exact: true }"
+    (click)="setNavActive($event, resolve(childrenItem) || '')">
+    {{ childrenItem.title }}
+  </a>
                 }
                 <!-- empty -->
                 @if (childrenItem.type === 'empty' ) {
@@ -176,17 +174,14 @@
                     }"
                   >
                     @if (childrenSubItem.type === 'link') {
-                    <a
-                      class="side-menu__item"
-                      routerLinkActive="active"
-                      [routerLink]="
-                        !childrenSubItem.type ? null : [childrenSubItem.path]
-                      "
-                      [routerLinkActiveOptions]="{ exact: true }"
-                      (click)="setNavActive($event, childrenSubItem.path ?? '')"
-                    >
-                      {{ childrenSubItem.title }}
-                    </a>
+                      <a
+    class="side-menu__item"
+    routerLinkActive="active"
+    [routerLink]="resolve(childrenSubItem) || null"
+    [routerLinkActiveOptions]="{ exact: true }"
+    (click)="setNavActive($event, resolve(childrenSubItem) || '')">
+    {{ childrenSubItem.title }}
+  </a>
                     } @if (childrenSubItem.type === 'empty') {
                     <a class="side-menu__item" href="javascript:;">
                       {{ childrenSubItem.title }}
@@ -218,18 +213,13 @@
                         [ngClass]="{ open: childrenSubItem1.active }"
                       >
                         @if (childrenSubItem1.type === 'link') {
-                        <a
-                          class="side-menu__item"
-                          routerLinkActive="active"
-                          [routerLink]="
-                            !childrenSubItem1.type
-                              ? null
-                              : [childrenSubItem1.path]
-                          "
-                          [routerLinkActiveOptions]="{ exact: true }"
-                        >
-                          {{ childrenSubItem1.title }}
-                        </a>
+                         <a
+    class="side-menu__item"
+    routerLinkActive="active"
+    [routerLink]="resolve(childrenSubItem1) || null"
+    [routerLinkActiveOptions]="{ exact: true }">
+    {{ childrenSubItem1.title }}
+  </a>  
                         } @if (childrenSubItem1.type === 'empty') {
                         <a class="side-menu__item" href="javascript:;">
                           {{ childrenSubItem1.title }}
