--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -25,16 +25,12 @@
 
       <ul class="main-menu" [ngStyle]="{ display: 'block' }">
         @for (menuItem of menuItems; track menuItem) {
-        <li
-          class="slide"
-          #activeMenuItems
-          [ngClass]="{
+        <li class="slide" #activeMenuItems [ngClass]="{
             slide__category: menuItem.headTitle,
             'slide has-sub': menuItem.title,
             open: menuItem.active,
             active: menuItem.selected
-          }"
-        >
+          }">
           <!-- head title -->
           @if (menuItem.headTitle) {
           <span class="category-name">{{ menuItem.headTitle }}</span>
@@ -42,13 +38,8 @@
 
           <!-- top-level LINK -->
           @if (menuItem.type === 'link') {
-          <a
-            class="side-menu__item"
-            [routerLink]="resolve(menuItem) || null"
-            routerLinkActive="active"
-            [class.disabled]="!canResolve(menuItem)"
-            (click)="onMenuClick($event, menuItem)"
-          >
+          <a class="side-menu__item" [routerLink]="resolve(menuItem) || null" routerLinkActive="active"
+            [class.disabled]="!canResolve(menuItem)" (click)="onMenuClick($event, menuItem)">
             @if (menuItem.icon) {
             <span class="iconclick" [appSvgReplace]="menuItem.icon"></span>
             }
@@ -58,12 +49,8 @@
 
           <!-- top-level EMPTY -->
           @if (menuItem.type === 'empty') {
-          <a
-            class="side-menu__item"
-            href="javascript:;"
-            [class.disabled]="!canResolve(menuItem)"
-            (click)="onMenuClick($event, menuItem)"
-          >
+          <a class="side-menu__item" href="javascript:;" [class.disabled]="!canResolve(menuItem)"
+            (click)="onMenuClick($event, menuItem)">
             @if (menuItem.icon) {
             <span class="iconclick" [appSvgReplace]="menuItem.icon"></span>
             }
@@ -73,12 +60,8 @@
 
           <!-- top-level SUB -->
           @if (menuItem.type === 'sub') {
-          <a
-            class="side-menu__item"
-            [routerLink]="menuItem.type ? null : [menuItem.path]"
-            [ngClass]="{ active: menuItem.selected }"
-            (click)="toggleNavActive($event, menuItem)"
-          >
+          <a class="side-menu__item" [routerLink]="menuItem.type ? null : [menuItem.path]"
+            [ngClass]="{ active: menuItem.selected }" (click)="toggleNavActive($event, menuItem)">
             @if (menuItem.icon) {
             <span class="iconclick" [appSvgReplace]="menuItem.icon"></span>
             }
@@ -89,64 +72,43 @@
 
           <!-- 2nd Level -->
           @if (menuItem.children) {
-          <ul
-            class="slide-menu child1"
-            [ngClass]="{
+          <ul class="slide-menu child1" [ngClass]="{
               active: menuItem.active,
               'double-menu-active': menuItem.active,
               'force-left': menuItem.dirchange
-            }"
-            [ngStyle]="{ display: menuItem.active ? 'block' : 'none' }"
-          >
+            }" [ngStyle]="{ display: menuItem.active ? 'block' : 'none' }">
             <li class="slide side-menu__label1">
               <a href="javascript:void(0)">{{ menuItem.title }}</a>
             </li>
 
             @for (childrenItem of menuItem.children; track childrenItem) {
-            <li
-              class="slide"
-              [ngClass]="{ active: childrenItem.selected }"
-              appDropdownPosition
-              [ngClass]="{
+            <li class="slide" [ngClass]="{ active: childrenItem.selected }" appDropdownPosition [ngClass]="{
                 open: childrenItem.active,
                 'has-sub': childrenItem.type === 'sub',
                 active: childrenItem.selected
-              }"
-            >
+              }">
               <!-- 2nd level link -->
               @if (childrenItem.type === 'link') {
-              <a
-                class="side-menu__item"
-                [routerLink]="resolve(childrenItem) || null"
-                routerLinkActive="active"
-                [routerLinkActiveOptions]="{ exact: true }"
-                [class.disabled]="!canResolve(childrenItem)"
-                (click)="onMenuClick($event, childrenItem)"
-              >
+              <a class="side-menu__item" [routerLink]="resolve(childrenItem) || null" routerLinkActive="active"
+                [routerLinkActiveOptions]="{ exact: true }" [class.disabled]="!canResolve(childrenItem)"
+                (click)="onMenuClick($event, childrenItem)">
                 {{ childrenItem.title }}
               </a>
               }
 
               <!-- 2nd level empty -->
               @if (childrenItem.type === 'empty') {
-              <a
-                class="side-menu__item"
-                href="javascript:;"
-                [class.disabled]="!canResolve(childrenItem)"
-                (click)="onMenuClick($event, childrenItem)"
-              >
+              <a class="side-menu__item" href="javascript:;" [class.disabled]="!canResolve(childrenItem)"
+                (click)="onMenuClick($event, childrenItem)">
                 {{ childrenItem.title }}
               </a>
               }
 
               <!-- 2nd level sub -->
               @if (childrenItem.type === 'sub') {
-              <a
-                class="side-menu__item"
-                [ngClass]="{ active: childrenItem.selected }"
+              <a class="side-menu__item" [ngClass]="{ active: childrenItem.selected }"
                 [routerLink]="childrenItem.type ? null : [childrenItem.path]"
-                (click)="toggleNavActive($event, childrenItem)"
-              >
+                (click)="toggleNavActive($event, childrenItem)">
                 <span>{{ childrenItem.title }}</span>
                 <i class="ri-arrow-down-s-line side-menu__angle"></i>
               </a>
@@ -154,50 +116,31 @@
 
               <!-- 3rd Level -->
               @if (childrenItem.children) {
-              <ul
-                class="slide-menu child2"
-                [ngClass]="{ 'force-left': childrenItem.dirchange }"
-                [ngStyle]="{ display: childrenItem.active ? 'block' : 'none' }"
-              >
+              <ul class="slide-menu child2" [ngClass]="{ 'force-left': childrenItem.dirchange }"
+                [ngStyle]="{ display: childrenItem.active ? 'block' : 'none' }">
                 @for (childrenSubItem of childrenItem.children; track childrenSubItem) {
-                <li
-                  class="slide"
-                  appDropdownPosition
-                  [ngClass]="{
+                <li class="slide" appDropdownPosition [ngClass]="{
                     open: childrenSubItem.active,
                     'has-sub': childrenSubItem.type === 'sub',
                     active: childrenSubItem.selected
-                  }"
-                >
+                  }">
                   @if (childrenSubItem.type === 'link') {
-                  <a
-                    class="side-menu__item"
-                    routerLinkActive="active"
-                    [routerLink]="resolve(childrenSubItem) || null"
-                    [routerLinkActiveOptions]="{ exact: true }"
-                    [class.disabled]="!canResolve(childrenSubItem)"
-                    (click)="onMenuClick($event, childrenSubItem)"
-                  >
+                  <a class="side-menu__item" routerLinkActive="active" [routerLink]="resolve(childrenSubItem) || null"
+                    [routerLinkActiveOptions]="{ exact: true }" [class.disabled]="!canResolve(childrenSubItem)"
+                    (click)="onMenuClick($event, childrenSubItem)">
                     {{ childrenSubItem.title }}
                   </a>
                   }
                   @if (childrenSubItem.type === 'empty') {
-                  <a
-                    class="side-menu__item"
-                    href="javascript:;"
-                    [class.disabled]="!canResolve(childrenSubItem)"
-                    (click)="onMenuClick($event, childrenSubItem)"
-                  >
+                  <a class="side-menu__item" href="javascript:;" [class.disabled]="!canResolve(childrenSubItem)"
+                    (click)="onMenuClick($event, childrenSubItem)">
                     {{ childrenSubItem.title }}
                   </a>
                   }
                   @if (childrenSubItem.type === 'sub') {
-                  <a
-                    class="side-menu__item"
-                    [ngClass]="{ active: childrenSubItem.selected }"
+                  <a class="side-menu__item" [ngClass]="{ active: childrenSubItem.selected }"
                     [routerLink]="childrenSubItem.type ? null : [childrenSubItem.path]"
-                    (click)="toggleNavActive($event, childrenSubItem)"
-                  >
+                    (click)="toggleNavActive($event, childrenSubItem)">
                     <span>{{ childrenSubItem.title }}</span>
                     <i class="ri-arrow-down-s-line side-menu__angle"></i>
                   </a>
@@ -205,32 +148,21 @@
 
                   <!-- 4th level -->
                   @if (childrenSubItem.children) {
-                  <ul
-                    class="slide-menu child3"
-                    [ngClass]="{ 'force-left': childrenItem.dirchange }"
-                    [ngStyle]="{ display: childrenSubItem.active ? 'block' : 'none' }"
-                  >
+                  <ul class="slide-menu child3" [ngClass]="{ 'force-left': childrenItem.dirchange }"
+                    [ngStyle]="{ display: childrenSubItem.active ? 'block' : 'none' }">
                     @for (childrenSubItem1 of childrenSubItem.children; track childrenSubItem1) {
                     <li class="slide" [ngClass]="{ open: childrenSubItem1.active }">
                       @if (childrenSubItem1.type === 'link') {
-                      <a
-                        class="side-menu__item"
-                        routerLinkActive="active"
-                        [routerLink]="resolve(childrenSubItem1) || null"
-                        [routerLinkActiveOptions]="{ exact: true }"
+                      <a class="side-menu__item" routerLinkActive="active"
+                        [routerLink]="resolve(childrenSubItem1) || null" [routerLinkActiveOptions]="{ exact: true }"
                         [class.disabled]="!canResolve(childrenSubItem1)"
-                        (click)="onMenuClick($event, childrenSubItem1)"
-                      >
+                        (click)="onMenuClick($event, childrenSubItem1)">
                         {{ childrenSubItem1.title }}
                       </a>
                       }
                       @if (childrenSubItem1.type === 'empty') {
-                      <a
-                        class="side-menu__item"
-                        href="javascript:;"
-                        [class.disabled]="!canResolve(childrenSubItem1)"
-                        (click)="onMenuClick($event, childrenSubItem1)"
-                      >
+                      <a class="side-menu__item" href="javascript:;" [class.disabled]="!canResolve(childrenSubItem1)"
+                        (click)="onMenuClick($event, childrenSubItem1)">
                         {{ childrenSubItem1.title }}
                       </a>
                       }
